--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -3,407 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lazer Runner</title>
+  <title>Lazer Runner - Trail</title>
   <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      gap: 20px;
-      padding: 20px;
-      margin: 0;
-      background-color: #000;
-      color: white;
-      font-family: Arial, sans-serif;
-    }
-    canvas {
-      border: 2px solid #fff;
-    }
-    #ranking {
-      width: 250px;
-    }
-    #ranking h2 {
-      margin-top: 0;
-    }
-    #footer {
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
-      font-size: 24px;
-      color: #aaa;
-    }
-    #version {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      font-size: 14px;
-      color: #aaa;
-    }
-    #startScreen, #gameOverScreen {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-size: 48px;
-      text-align: center;
-    }
-    #startScreen button, #gameOverScreen button {
-      margin: 20px;
-      padding: 10px 20px;
-      font-size: 24px;
-      cursor: pointer;
-      background-color: #fff;
-      color: #000;
-      border: none;
-      border-radius: 5px;
-    }
-    #startScreen button:hover, #gameOverScreen button:hover:not(:disabled) {
-      background-color: #ccc;
-    }
-    #startScreen.hidden, #gameOverScreen.hidden {
-      display: none;
-    }
-    #saveRankingButton:disabled {
-      background-color: #888;
-      color: #ccc;
-      cursor: not-allowed;
-      opacity: 0.6;
-    }
-    /* Estilo do botão Voltar */
-    #backButton {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      padding: 8px 16px;
-      font-size: 18px;
-      cursor: pointer;
-      background-color: #fff;
-      color: #000;
-      border: none;
-      border-radius: 5px;
-      z-index: 1000;
-    }
-    #backButton:hover {
-      background-color: #ccc;
-    }
+    body, html { margin:0; padding:0; background:#000; overflow:hidden; }
+    #container { position: relative; }
+    canvas { position:absolute; top:0; left:0; }
+    /* estilos para ranking e botões... */
   </style>
 </head>
 <body>
-  <button id="backButton" onclick="window.location.href = '../CentralJogos.html'">Voltar</button>
-  <canvas id="gameCanvas" width="900" height="900"></canvas>
-  <div id="ranking">
-    <h2>Ranking</h2>
-    <ol id="rankingList"></ol>
+  <button id="backButton" onclick="window.location.href='../CentralJogos.html'">Voltar</button>
+  <div id="container">
+    <canvas id="canvasBg" width="900" height="900"></canvas>
+    <canvas id="canvasTrail" width="900" height="900"></canvas>
   </div>
-  <div id="startScreen">
-    <h1>LazerRunner</h1>
-    <button id="playButton">Play</button>
-  </div>
-  <div id="gameOverScreen" class="hidden">
-    <h1>Game Over</h1>
-    <p id="finalScore"></p>
-    <button id="restartButton">Restart</button>
-    <button id="saveRankingButton">Salvar no Ranking</button>
-  </div>
-  <div id="footer">
-    Mover: Setas ou WASD<br />
-    Imunidade: Barra de espaço<br />
-    Reiniciar: Enter
-  </div>
-  <div id="version">Versão 1.3</div>
+  <!-- ranking, screens, footer... -->
 
   <script>
-    document.addEventListener('contextmenu', e => {
-      e.preventDefault();
-      alert('Clique com o botão direito desativado.');
-    });
-    document.addEventListener('keydown', e => {
-      if (e.key === 'F12' || e.keyCode === 123) {
-        e.preventDefault();
-        alert('Ferramentas de desenvolvedor desativadas.');
-      }
-    });
+    const bg = document.getElementById('canvasBg'),
+          trail = document.getElementById('canvasTrail'),
+          bgCtx = bg.getContext('2d'), trailCtx = trail.getContext('2d');
+    const width = bg.width, height = bg.height;
+    /* definições de player, bars, controls, ranking etc. (idem ao seu código) */
 
-    const canvas = document.getElementById('gameCanvas');
-    const ctx = canvas.getContext('2d');
-    const startScreen = document.getElementById('startScreen');
-    const gameOverScreen = document.getElementById('gameOverScreen');
-    const playButton = document.getElementById('playButton');
-    const restartButton = document.getElementById('restartButton');
-    const saveRankingButton = document.getElementById('saveRankingButton');
-    const finalScoreText = document.getElementById('finalScore');
-
-    let gameStarted = false;
-    let scoreSaved = false;
-    const boundary = { x: 70, y: 70, width: canvas.width - 140, height: canvas.height - 140 };
-    const player = {
-      x: canvas.width / 2,
-      y: canvas.height / 2,
-      radius: 20,
-      speed: 4,
-      immune: false,
-      immuneTime: 0,
-      immuneDuration: 1500,
-      immuneCooldown: 2000,
-      lastImmuneEnd: 0
-    };
-    let bars = [];
-    let score = 0;
-    let gameOver = false;
-    let keys = {
-      ArrowUp: false, ArrowDown: false,
-      ArrowLeft: false, ArrowRight: false,
-      w: false, W: false,
-      s: false, S: false,
-      a: false, A: false,
-      d: false, D: false,
-      ' ': false, Enter: false
-    };
-    let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
-
-    function saveRanking() {
-      try {
-        localStorage.setItem('rankings', JSON.stringify(rankings));
-      } catch (e) {
-        alert('Erro ao salvar a pontuação.');
-      }
+    function drawBg() {
+      bgCtx.clearRect(0,0,width,height);
+      bgCtx.fillStyle = '#000';
+      bgCtx.fillRect(0,0,width,height);
+      bgCtx.strokeStyle='white'; bgCtx.lineWidth=2;
+      bgCtx.strokeRect(boundary.x,boundary.y,boundary.width,boundary.height);
+      bgCtx.fillStyle='red';
+      bars.forEach(b=> bgCtx.fillRect(b.x,b.y,b.width,b.height));
+      /* HUD */
     }
 
-    function updateRanking() {
-      const list = document.getElementById('rankingList');
-      list.innerHTML = '';
-      rankings.sort((a, b) => b.score - a.score)
-              .slice(0, 10)
-              .forEach(e => {
-        const li = document.createElement('li');
-        li.textContent = `${e.name} - ${e.score}`;
-        list.appendChild(li);
-      });
-    }
-
-    document.addEventListener('keydown', e => {
-      if (e.key in keys) {
-        keys[e.key] = true;
-
-        if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
-          player.immune = true;
-          player.immuneTime = Date.now();
-        }
-
-        if (e.key === 'Enter' && gameOver) resetGame();
-      }
-    });
-
-    document.addEventListener('keyup', e => {
-      if (e.key in keys) keys[e.key] = false;
-    });
-
-    playButton.addEventListener('click', () => {
-      startScreen.classList.add('hidden');
-      gameStarted = true;
-      resetGame();
-    });
-
-    restartButton.addEventListener('click', () => {
-      gameOverScreen.classList.add('hidden');
-      resetGame();
-    });
-
-    saveRankingButton.addEventListener('click', () => {
-      if (scoreSaved) return;
-
-      const name = prompt('Digite seu nome:');
-      if (name && name.trim()) {
-        rankings.push({ name: name.trim(), score });
-        saveRanking();
-        updateRanking();
-        scoreSaved = true;
-        saveRankingButton.disabled = true;
-        saveRankingButton.textContent = 'Salvo';
-        alert('Pontuação salva!');
-      } else if (name !== null) {
-        alert('Nome inválido.');
-      }
-    });
-
-    function resetGame() {
-      player.x = canvas.width / 2;
-      player.y = canvas.height / 2;
-      player.immune = false;
-      score = 0;
-      bars = [];
-      gameOver = false;
-      scoreSaved = false;
-      saveRankingButton.disabled = false;
-      saveRankingButton.textContent = 'Salvar no Ranking';
-      lastFrameTime = lastBarTime = 0;
-      gameOverScreen.classList.add('hidden');
-      requestAnimationFrame(gameLoop);
-    }
-
-    function createBar() {
-      const dir = Math.floor(Math.random() * 4);
-      const thickness = 30;
-      const length = Math.random() * 400 + 200;
-      const speed = 2 + Math.random() * 1.8;
-      let bar;
-      switch (dir) {
-        case 0:
-          bar = { x: -thickness, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: speed, dy: 0 };
-          break;
-        case 1:
-          bar = { x: canvas.width, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: -speed, dy: 0 };
-          break;
-        case 2:
-          bar = { x: Math.random() * (canvas.width - length), y: -thickness, width: length, height: thickness, dx: 0, dy: speed };
-          break;
-        case 3:
-          bar = { x: Math.random() * (canvas.width - length), y: canvas.height, width: length, height: thickness, dx: 0, dy: -speed };
-          break;
-      }
-      bars.push(bar);
-    }
-
-    function movePlayer(dt) {
-      let dx = 0, dy = 0;
-      if (keys.ArrowUp || keys.w) dy--;
-      if (keys.ArrowDown || keys.s) dy++;
-      if (keys.ArrowLeft || keys.a) dx--;
-      if (keys.ArrowRight || keys.d) dx++;
-
-      if (dx || dy) {
-        const len = Math.hypot(dx, dy);
-        player.x += (dx / len) * player.speed;
-        player.y += (dy / len) * player.speed;
-        player.x = Math.max(boundary.x + player.radius, Math.min(player.x, boundary.x + boundary.width - player.radius));
-        player.y = Math.max(boundary.y + player.radius, Math.min(player.y, boundary.y + boundary.height - player.radius));
-      }
-    }
-
-    function moveBars(dt) {
-      bars.forEach(b => {
-        b.x += b.dx * dt;
-        b.y += b.dy * dt;
-      });
-    }
-
-    function checkCollisions() {
-      if (player.immune) return;
-      for (const b of bars) {
-        if (
-          player.x + player.radius > b.x &&
-          player.x - player.radius < b.x + b.width &&
-          player.y + player.radius > b.y &&
-          player.y - player.radius < b.y + b.height
-        ) {
-          gameOver = true;
-          break;
-        }
-      }
-    }
-
-    function manageImmunity() {
-      if (player.immune && Date.now() - player.immuneTime > player.immuneDuration) {
-        player.immune = false;
-        player.lastImmuneEnd = Date.now();
-      }
-    }
-
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      if (!gameStarted) return;
-
-      ctx.strokeStyle = 'white';
-      ctx.lineWidth = 2;
-      ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
-
-      const now = Date.now();
-      const inCooldown = now - player.lastImmuneEnd < player.immuneCooldown;
-      const cooldownRemaining = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
-      const immunityRemaining = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
-
-      ctx.beginPath();
-      ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
-      ctx.fillStyle = player.immune ? 'yellow' : inCooldown ? '#444' : 'white';
-      ctx.fill();
-
+    function drawTrail() {
+      // Rastro sutil do jogador
+      trailCtx.fillStyle='rgba(0,0,0,0.15)';
+      trailCtx.fillRect(0,0,width,height);
+      // Desenha jogador
+      trailCtx.beginPath();
+      trailCtx.arc(player.x, player.y, player.radius, 0, 2*Math.PI);
+      trailCtx.fillStyle = player.immune?'yellow':(inCd?'#444':'white');
+      trailCtx.fill();
       if (player.immune) {
-        ctx.beginPath();
-        ctx.arc(player.x, player.y, player.radius + 10, 0, Math.PI * 2);
-        ctx.strokeStyle = 'yellow';
-        ctx.lineWidth = 3;
-        ctx.stroke();
-      }
-
-      ctx.fillStyle = 'red';
-      bars.forEach(b => ctx.fillRect(b.x, b.y, b.width, b.height));
-
-      ctx.fillStyle = 'white';
-      ctx.font = '24px Arial';
-      ctx.textAlign = 'left';
-      ctx.fillText(`Pontuação: ${score}`, 10, 30);
-
-      ctx.fillStyle = 'yellow';
-      ctx.font = '18px Arial';
-      ctx.fillText(`Imunidade: ${(immunityRemaining / 1000).toFixed(1)}s`, 180, 28);
-
-      ctx.fillStyle = inCooldown ? 'gray' : 'green';
-      ctx.fillText(`Recarga: ${(cooldownRemaining / 1000).toFixed(1)}s`, 340, 28);
-
-      if (gameOver) {
-        finalScoreText.textContent = `Pontuação Final: ${score}`;
-        gameOverScreen.classList.remove('hidden');
+        trailCtx.strokeStyle='yellow'; trailCtx.lineWidth=3;
+        trailCtx.beginPath();
+        trailCtx.arc(player.x, player.y, player.radius+10, 0, 2*Math.PI);
+        trailCtx.stroke();
       }
     }
 
-    let lastFrameTime = 0;
-    let lastBarTime = 0;
-
-    function gameLoop(timestamp) {
+    function gameLoop(ts) {
       if (!gameStarted || gameOver) {
-        draw();
+        drawBg();
+        drawTrail();
         return;
       }
+      /* lógica de criação de bars, movimento, colisões */
 
-      const dt = (timestamp - lastFrameTime) / 16.67;
-      lastFrameTime = timestamp;
-
-      let barInterval, numBars;
-      if (score <= 10) { barInterval = 4000; numBars = 2; }
-      else if (score <= 25) { barInterval = 3000; numBars = 2; }
-      else if (score <= 35) { barInterval = 4000; numBars = 3; }
-      else if (score <= 45) { barInterval = 3800; numBars = 3; }
-      else if (score <= 55) { barInterval = 4000; numBars = 4; }
-      else { barInterval = 3500; numBars = 3; }
-
-      if (timestamp - lastBarTime > barInterval) {
-        for (let i = 0; i < numBars; i++) createBar();
-        lastBarTime = timestamp;
-        score++;
-      }
-
-      movePlayer(dt);
-      moveBars(dt);
-      manageImmunity();
-      checkCollisions();
-      draw();
+      drawBg();
+      drawTrail();
 
       requestAnimationFrame(gameLoop);
     }
 
-    updateRanking();
-    requestAnimationFrame(ts => {
-      lastFrameTime = ts;
-      lastBarTime = ts;
-      gameLoop(ts);
-    });
+    resetGame();
+    requestAnimationFrame(gameLoop);
   </script>
 </body>
 </html>
